src/native/jalium.native.core/include/jalium_api.h


JALIUM_API JaliumResult jalium_render_target_query_gpu_timing(
    JaliumRenderTarget* rt,
    JaliumGpuTimingStats* out);
JALIUM_API intptr_t jalium_render_target_get_frame_latency_waitable(
    JaliumRenderTarget* rt);
JALIUM_API JaliumResult jalium_render_target_reclaim_idle_resources(
    JaliumRenderTarget* rt);
JALIUM_API JaliumResult jalium_render_target_request_readback(
    JaliumRenderTarget* rt);
JALIUM_API JaliumResult jalium_render_target_fetch_readback(
    JaliumRenderTarget* rt,
    uint8_t* buffer,
    uint32_t buffer_stride,
    int32_t* out_width,
    int32_t* out_height);
JALIUM_API JaliumRenderTarget* jalium_render_target_create_for_hwnd(
    JaliumContext* ctx,
    void* hwnd,
    int32_t width,
    int32_t height
);
JALIUM_API JaliumRenderTarget* jalium_render_target_create_for_composition(
    JaliumContext* ctx,
    void* hwnd,
    int32_t width,
    int32_t height
);
JALIUM_API JaliumRenderTarget* jalium_render_target_create_for_surface(
    JaliumContext* ctx,
    const JaliumSurfaceDescriptor* surface,
    int32_t width,
    int32_t height
);
JALIUM_API JaliumRenderTarget* jalium_render_target_create_for_composition_surface(
    JaliumContext* ctx,
    const JaliumSurfaceDescriptor* surface,
    int32_t width,
    int32_t height
);
JALIUM_API void jalium_render_target_destroy(JaliumRenderTarget* rt);
JALIUM_API JaliumResult jalium_render_target_resize(JaliumRenderTarget* rt, int32_t width, int32_t height);
JALIUM_API JaliumResult jalium_render_target_begin_draw(JaliumRenderTarget* rt);
JALIUM_API JaliumResult jalium_render_target_end_draw(JaliumRenderTarget* rt);
JALIUM_API void jalium_render_target_clear(JaliumRenderTarget* rt, float r, float g, float b, float a);
JALIUM_API void jalium_render_target_set_vsync(JaliumRenderTarget* rt, int32_t enabled);
JALIUM_API void jalium_render_target_set_external_present_pacing(JaliumRenderTarget* rt, int32_t enabled);
JALIUM_API void jalium_render_target_set_path_msaa(JaliumRenderTarget* rt, uint32_t sampleCount);
JALIUM_API void jalium_render_target_set_dpi(JaliumRenderTarget* rt, float dpiX, float dpiY);
JALIUM_API void jalium_render_target_add_dirty_rect(JaliumRenderTarget* rt, float x, float y, float width, float height);
JALIUM_API void jalium_render_target_set_full_invalidation(JaliumRenderTarget* rt);
JALIUM_API int   jalium_render_target_supports_retained_layers(JaliumRenderTarget* rt);
JALIUM_API void* jalium_render_target_realize_layer_begin(JaliumRenderTarget* rt, void* existingLayer, float x, float y, float w, float h);
JALIUM_API void  jalium_render_target_realize_layer_end(JaliumRenderTarget* rt, void* layer);
JALIUM_API void  jalium_render_target_composite_layer(JaliumRenderTarget* rt, void* layer, float x, float y, float w, float h, float opacity);
JALIUM_API void  jalium_render_target_destroy_retained_layer(JaliumRenderTarget* rt, void* layer);
JALIUM_API int32_t jalium_render_target_supports_partial_presentation(JaliumRenderTarget* rt);
JALIUM_API JaliumResult jalium_render_target_create_webview_visual(
    JaliumRenderTarget* rt,
    void** visual_out);
JALIUM_API JaliumResult jalium_render_target_destroy_webview_visual(
    JaliumRenderTarget* rt,
    void* visual);
JALIUM_API JaliumResult jalium_render_target_set_webview_visual_placement(
    JaliumRenderTarget* rt,
    void* visual,
    int32_t x,
    int32_t y,
    int32_t width,
    int32_t height,
    int32_t content_offset_x,
    int32_t content_offset_y);
JALIUM_API JaliumResult jalium_render_target_create_anim_probe(
    JaliumRenderTarget* rt,
    int32_t x,
    int32_t y,
    int32_t width,
    int32_t height,
    float travel_px,
    float period_sec,
    uint32_t color_argb,
    int32_t vertical,
    void** visual_out);
JALIUM_API JaliumResult jalium_render_target_destroy_anim_probe(
    JaliumRenderTarget* rt,
    void* visual);