src/managed/Jalium.UI.Interop/NativeMethods.cs


    /// <summary>
    /// Mirrors native <c>JaliumGpuTimingStats</c> — per-category GPU work
    /// breakdown for the previously completed frame, sourced from hardware
    /// timestamp queries. Layout matches the C struct (Sequential, default pack).
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct GpuTimingNative
    {
        public long TotalGpuNs;
        public long SdfRectNs;
        public long TextNs;
        public long BitmapNs;
        public long PathNs;
        public long BackdropNs;
        public long LiquidGlassNs;
        public long OtherNs;
        public int BatchCount;
        public int TimingValid;
    }

    /// <summary>
    /// Reads back hardware-timestamp GPU breakdown for the previous frame.
    /// Returns JALIUM_OK (0) on success (TimingValid may still be 0 if no
    /// frame has been decoded yet); JALIUM_ERROR_NOT_SUPPORTED (3) if the
    /// backend has no timestamp-query implementation at all.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_query_gpu_timing")]
    internal static partial int RenderTargetQueryGpuTiming(nint renderTarget, out GpuTimingNative timing);

    /// <summary>
    /// Returns the OS HANDLE (cast to nint) the render target uses as its
    /// frame-latency waitable, or 0 if the backend has none.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_get_frame_latency_waitable")]
    internal static partial nint RenderTargetGetFrameLatencyWaitable(nint renderTarget);

    /// <summary>
    /// Asks the backend to drop any reusable GPU / CPU caches it has accumulated
    /// (path tessellation results, rasterized text bitmaps, glyph atlas pages,
    /// gradient stops, etc). Invoked by the managed-side idle reclaimer once the
    /// app has been quiet long enough that holding the caches is no longer worth
    /// the memory; backends rebuild on demand on the next frame that needs them.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_reclaim_idle_resources")]
    internal static partial int RenderTargetReclaimIdleResources(nint renderTarget);

    /// <summary>
    /// Arms a one-shot back-buffer readback: the render target's NEXT EndDraw
    /// copies the finished back buffer to a CPU-readable staging resource right
    /// before Present. Returns JALIUM_OK (0) when latched;
    /// JALIUM_ERROR_NOT_SUPPORTED (3) on backends without a readback
    /// implementation (parity harness reports those as SKIP).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_request_readback")]
    internal static partial int RenderTargetRequestReadback(nint renderTarget);

    /// <summary>
    /// Fetches the pixels captured by the EndDraw that consumed the last
    /// RenderTargetRequestReadback. Blocks on the frame's fence, then writes
    /// tightly-packed BGRA8 rows (byte order B,G,R,A; raw backbuffer bytes —
    /// no un-premultiply) into <paramref name="buffer"/>, one row per
    /// <paramref name="bufferStride"/> bytes, top-down. MUST be called after
    /// the capturing EndDraw returned — never between BeginDraw and EndDraw.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_fetch_readback")]
    internal static unsafe partial int RenderTargetFetchReadback(
        nint renderTarget, byte* buffer, uint bufferStride, out int width, out int height);

    #endregion

    #region Render Target Management

    /// <summary>
    /// Creates a render target for a window handle.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_create_for_hwnd")]
    internal static partial nint RenderTargetCreateForHwnd(nint context, nint hwnd, int width, int height);

    /// <summary>
    /// Creates a render target with composition swap chain for per-pixel alpha transparency.
    /// Uses CreateSwapChainForComposition + DirectComposition.
    /// The window must have WS_EX_NOREDIRECTIONBITMAP extended style.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_create_for_composition")]
    internal static partial nint RenderTargetCreateForComposition(nint context, nint hwnd, int width, int height);

    /// <summary>
    /// Creates a render target from a platform-neutral surface descriptor.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_create_for_surface")]
    internal static partial nint RenderTargetCreateForSurface(nint context, in NativeSurfaceDescriptor surface, int width, int height);

    /// <summary>
    /// Creates a composition-capable render target from a platform-neutral surface descriptor.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_create_for_composition_surface")]
    internal static partial nint RenderTargetCreateForCompositionSurface(nint context, in NativeSurfaceDescriptor surface, int width, int height);

    /// <summary>
    /// Destroys a render target.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_destroy")]
    internal static partial void RenderTargetDestroy(nint renderTarget);

    /// <summary>
    /// Resizes a render target.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_resize")]
    internal static partial int RenderTargetResize(nint renderTarget, int width, int height);

    /// <summary>
    /// Begins a drawing session.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_begin_draw")]
    internal static partial int RenderTargetBeginDraw(nint renderTarget);

    /// <summary>
    /// Ends a drawing session.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_end_draw")]
    internal static partial int RenderTargetEndDraw(nint renderTarget);

    /// <summary>
    /// Clears the render target.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_clear")]
    internal static partial void RenderTargetClear(nint renderTarget, float r, float g, float b, float a);

    /// <summary>
    /// Sets whether VSync is enabled.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_set_vsync")]
    internal static partial void RenderTargetSetVSync(nint renderTarget, int enabled);

    /// <summary>
    /// Hands present pacing to the managed scheduler: BeginDraw stops waiting
    /// on the swap-chain frame-latency waitable (the caller consumes it via a
    /// thread-pool wait callback) and Present uses sync interval 0 so it never
    /// blocks on the compositor. No-op on backends without a waitable.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_set_external_present_pacing")]
    internal static partial void RenderTargetSetExternalPresentPacing(nint renderTarget, int enabled);

    /// <summary>
    /// Sets the path stencil-then-cover MSAA sample count (1/2/4/8). Applied at
    /// the next frame boundary; backends without an MSAA path renderer ignore it.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_set_path_msaa")]
    internal static partial void RenderTargetSetPathMsaa(nint renderTarget, uint sampleCount);

    /// <summary>
    /// Sets the DPI for the render target so D2D maps DIP coordinates to physical pixels.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_set_dpi")]
    internal static partial void RenderTargetSetDpi(nint renderTarget, float dpiX, float dpiY);

    /// <summary>
    /// Adds a dirty rectangle for partial rendering optimization.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_add_dirty_rect")]
    internal static partial void RenderTargetAddDirtyRect(nint renderTarget, float x, float y, float width, float height);

    /// <summary>
    /// Marks the entire render target as needing full redraw.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_set_full_invalidation")]
    internal static partial void RenderTargetSetFullInvalidation(nint renderTarget);

    // ── Retained GPU layers (damage-driven composited-animation fast path) ──
    // Realize a content-clean subtree into a persistent offscreen texture once,
    // then composite it as a transformed/opacity quad each frame. Returns 0 /
    // null when the backend lacks offscreen-RT capture so callers fall back.

    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_supports_retained_layers")]
    internal static partial int RenderTargetSupportsRetainedLayers(nint renderTarget);

    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_realize_layer_begin")]
    internal static partial nint RenderTargetRealizeLayerBegin(
        nint renderTarget, nint existingLayer, float x, float y, float w, float h);

    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_realize_layer_end")]
    internal static partial void RenderTargetRealizeLayerEnd(nint renderTarget, nint layer);

    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_composite_layer")]
    internal static partial void RenderTargetCompositeLayer(
        nint renderTarget, nint layer, float x, float y, float w, float h, float opacity);

    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_destroy_retained_layer")]
    internal static partial void RenderTargetDestroyRetainedLayer(nint renderTarget, nint layer);

    /// <summary>
    /// Returns whether the render target supports partial redraw + dirty-rect presentation.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_supports_partial_presentation")]
    internal static partial int RenderTargetSupportsPartialPresentation(nint renderTarget);

    /// <summary>
    /// Creates a composition visual node for hosting external content (e.g. WebView).
    /// Returns a backend-specific COM pointer (IUnknown* on Windows).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_create_webview_visual")]
    internal static partial int RenderTargetCreateWebViewVisual(nint renderTarget, out nint visualTarget);

    /// <summary>
    /// Destroys a composition visual previously created by RenderTargetCreateWebViewVisual.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_destroy_webview_visual")]
    internal static partial int RenderTargetDestroyWebViewVisual(nint renderTarget, nint visualTarget);

    /// <summary>
    /// Updates the placement and clip rectangle of a composition visual created for WebView hosting.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_set_webview_visual_placement")]
    internal static partial int RenderTargetSetWebViewVisualPlacement(
        nint renderTarget,
        nint visualTarget,
        int x,
        int y,
        int width,
        int height,
        int contentOffsetX,
        int contentOffsetY);

    /// <summary>
    /// Off-thread animation probe (Increment 1 hard gate): creates a self-driving
    /// DComp child visual (solid-color content + autonomous offset animation).
    /// Returns the native visual pointer; non-zero result code means unsupported.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_create_anim_probe")]
    internal static partial int RenderTargetCreateAnimProbe(
        nint renderTarget,
        int x,
        int y,
        int width,
        int height,
        float travelPx,
        float periodSec,
        uint colorArgb,
        int vertical,
        out nint visualTarget);

    /// <summary>
    /// Destroys a probe visual previously created by RenderTargetCreateAnimProbe.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_destroy_anim_probe")]
    internal static partial int RenderTargetDestroyAnimProbe(nint renderTarget, nint visualTarget);

    #endregion
